// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`potrace/index > golden file tests > produces consistent output for simple square > paths 1`] = `
[
  {
    "d": "M 5.250 0.250 L 0 0 0.250 4.750 L 0.500 9.500 5.172 9 C 9.804 8.504, 9.847 8.466, 10.172 4.500 L 10.500 0.500 5.250 0.250 M 0.653 4.500 C 0.376 0.851, 0.353 0.895, 0.388 5 C 0.409 7.475, 0.546 9.275, 0.691 9 C 0.837 8.725, 0.820 6.700, 0.653 4.500 M 4.750 3.250 C 3.583 3.083, 3.083 3.583, 3.250 4.750 C 3.388 5.713, 4.185 6.500, 5.021 6.500 C 5.858 6.500, 6.533 5.825, 6.521 5 C 6.510 4.175, 5.713 3.388, 4.750 3.250 ",
    "fillOpacity": "1.000",
  },
]
`;

exports[`potrace/index > golden file tests > produces consistent output for simple square > result 1`] = `
{
  "dark": false,
  "height": 10,
  "paths": [
    {
      "d": "M 5.250 0.250 L 0 0 0.250 4.750 L 0.500 9.500 5.172 9 C 9.804 8.504, 9.847 8.466, 10.172 4.500 L 10.500 0.500 5.250 0.250 M 0.653 4.500 C 0.376 0.851, 0.353 0.895, 0.388 5 C 0.409 7.475, 0.546 9.275, 0.691 9 C 0.837 8.725, 0.820 6.700, 0.653 4.500 M 4.750 3.250 C 3.583 3.083, 3.083 3.583, 3.250 4.750 C 3.388 5.713, 4.185 6.500, 5.021 6.500 C 5.858 6.500, 6.533 5.825, 6.521 5 C 6.510 4.175, 5.713 3.388, 4.750 3.250 ",
      "fillOpacity": "1.000",
    },
  ],
  "width": 10,
}
`;
